--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
                 <h2>Front</h2>
                 
             </div>
-			<div class="cubeGroup cube-top cube-2"><h2>Top</h2></div>
-			<div class="cubeGroup cube-left cube-3"><h2>Left</h2></div>
-			<div class="cubeGroup cube-right cube-4"><h2>Right</h2></div>
+			<div class="cubeGroup cube-top cube-2">
+				<img src="./asset/vendredi_13.jpg" alt="vendredi 13">
+			</div>
+			<div class="cubeGroup cube-left cube-3">
+				<img src="./asset/it.jpg" alt="it">
+			</div>
+			<div class="cubeGroup cube-right cube-4">
+				<img src="./asset/steinar-engeland-SNiOntJ62ws-unsplash.jpg" alt="phantome">
+			</div>
 			<div class="cubeGroup cube-rear cube-5"><h2>Rear</h2></div>
 			<div class="cubeGroup cube-bottom cube-6"><h2>Bottom</h2></div>
 		</div>
