--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
     <link rel="manifest" href="./favicon/site.webmanifest">
+	<link rel="stylesheet" href="./font/stylesheet.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+	<header>
+		<h1>
+			Good Halloween
+		</h1>
+	</header>
 	
 	<main class="containCube">
-		<div class="cube" role=""group">
+		<div class="cube" role="group">
 			<div class="cubeGroup cube-front cube-1">
-                <h2>Front</h2>
-                
+                <img src="./asset/halloween-cover.jpeg" alt="halloween">
             </div>
 			<div class="cubeGroup cube-top cube-2">
 				<img src="./asset/vendredi_13.jpg" alt="vendredi 13">
@@ -28,8 +33,12 @@
 			<div class="cubeGroup cube-right cube-4">
 				<img src="./asset/steinar-engeland-SNiOntJ62ws-unsplash.jpg" alt="phantome">
 			</div>
-			<div class="cubeGroup cube-rear cube-5"><h2>Rear</h2></div>
-			<div class="cubeGroup cube-bottom cube-6"><h2>Bottom</h2></div>
+			<div class="cubeGroup cube-rear cube-5">
+				<img src="./asset/pazzz.jpg" alt="pazz">
+			</div>
+			<div class="cubeGroup cube-bottom cube-6">
+				<img src="./asset/cover-exorciste.webp" alt="Regain">
+			</div>
 		</div>
 	</main>
 	
