--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 	<main class="containCube">
 		<div class="cube" role="group">
 			<div class="cubeGroup cube-front cube-1">
-                <img src="./asset/halloween-cover.jpeg" alt="halloween">
+                <img src="./asset/halloween-cover.jpeg" alt="halloween" loading="lazy">
             </div>
 			<div class="cubeGroup cube-top cube-2">
-				<img src="./asset/vendredi_13.jpg" alt="vendredi 13">
+				<img src="./asset/vendredi_13.jpg" alt="vendredi 13" loading="lazy">
 			</div>
 			<div class="cubeGroup cube-left cube-3">
 				<img src="./asset/it.jpg" alt="it">
 			</div>
 			<div class="cubeGroup cube-right cube-4">
-				<img src="./asset/steinar-engeland-SNiOntJ62ws-unsplash.jpg" alt="phantome">
+				<img src="./asset/steinar-engeland-SNiOntJ62ws-unsplash.jpg" alt="phantome" loading="lazy">
 			</div>
 			<div class="cubeGroup cube-rear cube-5">
-				<img src="./asset/pazzz.jpg" alt="pazz">
+				<img src="./asset/pazzz.jpg" alt="pazz" loading="lazy">
 			</div>
 			<div class="cubeGroup cube-bottom cube-6">
-				<img src="./asset/cover-exorciste.webp" alt="Regain">
+				<img src="./asset/cover-exorciste.webp" alt="Regain" loading="lazy">
 			</div>
 		</div>
 	</main>
