--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 	<main class="containCube">
 		<div class="cube" role="group">
-			<div class="cubeGroup cube-front cube-1">
+			<div class="cubeGroup cube-front cube-1" role="img">
                 <img src="./asset/halloween-cover.jpeg" alt="halloween" loading="lazy">
             </div>
 			<div class="cubeGroup cube-top cube-2">
@@ -40,8 +40,13 @@
 			<div class="cubeGroup cube-bottom cube-6">
 				<img src="./asset/cover-exorciste.webp" alt="Regain" loading="lazy">
 			</div>
+
+			
 		</div>
+		
 	</main>
+
+
 	
 </body>
 </html>
