--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="Intégration d'un cube animé en html et css. Vous pouvez également changer le design et créer une interface de navigation">
+	<!-- open graph -->
+	<meta property="og:title" content="Portfolio">
+    <meta property="og:url" content="https://giusmili.github.io/cube-halloween">
+    <meta property="og:image" content="https://giusmili.github.io/cube-halloween/asset/vendredi_13.jpg">
+	
 	<title>Magna Cubis Halloween</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
