--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 	<meta name="description" content="Intégration d'un cube animé en html et css. Vous pouvez également changer le design et créer une interface de navigation">
 	<!-- open graph -->
 	<meta property="og:title" content="Portfolio">
-    <meta property="og:url" content="https://giusmili.github.io/cube-halloween">
+    <meta property="og:url" content="https://giusmili.github.io/cube-halloween/">
     <meta property="og:image" content="https://giusmili.github.io/cube-halloween/asset/vendredi_13.jpg">
-	
+	<!-- twitter card -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="giusmili.github.io">
+	<meta property="twitter:url" content="https://giusmili.github.io/cube-halloween/">
+	<meta name="twitter:title" content="Portfolio">
+	<meta name="twitter:description" content="Page for Halloween in the world">
+	<meta name="twitter:image" content="https://giusmili.github.io/cube-halloween/asset/vendredi_13.jpg">
 	<title>Magna Cubis Halloween</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
