--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta property="og:title" content="Portfolio">
     <meta property="og:url" content="https://giusmili.github.io/cube-halloween/">
     <meta property="og:image" content="https://giusmili.github.io/cube-halloween/asset/vendredi_13.jpg">
+	<meta property="og:description" content="Page for Halloween in the world">
 	<!-- twitter card -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="giusmili.github.io">
@@ -20,7 +21,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/site.webmanifest">
+	<link rel="canonical" href="https://giusmili.github.io/cube-halloween/">
+	<link rel="manifest" href="./favicon/site.webmanifest">
 	<link rel="stylesheet" href="./font/stylesheet.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
