--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 <body>
 	<header>
 		<h1>
-			Good Halloween <span aria-hidden="true">🦇</span> 
+			Halloween night <span aria-hidden="true">🦇</span> 
 		</h1>
 	</header>
 	
 	<main class="containCube">
 		<div class="cube" role="group">
-			<div class="cubeGroup cube-front cube-1" role="img">
-                <img src="./asset/halloween-cover.jpeg" alt="halloween" loading="lazy">
+			<div class="cubeGroup cube-front cube-1" role="region" aria-describedby="cover">
+                <img src="./asset/halloween-cover.jpeg" id="cover" alt="halloween" loading="lazy">
             </div>
 			<div class="cubeGroup cube-top cube-2">
 				<img src="./asset/vendredi_13.jpg" alt="vendredi 13" loading="lazy">
