--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="Intégration d'un cube animé en html et css. Vous pouvez également changer le design et créer une interface de navigation">
 	<!-- open graph -->
-	<meta property="og:title" content="Portfolio">
+	<meta property="og:title" content="Halloween">
     <meta property="og:url" content="https://giusmili.github.io/cube-halloween/">
     <meta property="og:image" content="https://giusmili.github.io/cube-halloween/asset/vendredi_13.jpg">
 	<meta property="og:description" content="Page for Halloween in the world">
