--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="giusmili.github.io">
 	<meta property="twitter:url" content="https://giusmili.github.io/cube-halloween/">
-	<meta name="twitter:title" content="Portfolio">
+	<meta name="twitter:title" content="Halloween">
 	<meta name="twitter:description" content="Page for Halloween in the world">
 	<meta name="twitter:image" content="https://giusmili.github.io/cube-halloween/asset/vendredi_13.jpg">
 	<title>Magna Cubis Halloween</title>
